# talend2python_framework

./: README.md  pyproject.toml  setup.cfg  user_guide.md
db_migration/: cli.py  config.py  migrator.py
talend2python/: cli.py
talend2python.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
talend2python/generators/: pandas_generator.py  pyspark_generator.py
talend2python/ir/: model.py
talend2python/mapping/: component_map.yaml
talend2python/parsers/: talend_xml_parser.py
talend2python/runtime/: __init__.py  components.py  io.py  routines.py  utils.py
talend2python/talend2python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
talend2python/templates/: main_pandas.py.j2  main_pyspark.py.j2
talend2python/translator/: __init__.py
talend2python_framework/: Makefile  README.md  pyproject.toml  setup.cfg
talend2python_framework/.github/workflows/: ci.yml
talend2python_framework/data/: input.csv
talend2python_framework/examples/: mssql_to_orass.yaml
talend2python_framework/talend2python/: __init__.py  cli.py
talend2python_framework/talend2python/generators/: __init__.py  pandas_generator.py  pyspark_generator.py
talend2python_framework/talend2python/ir/: model.py
talend2python_framework/tests/: conftest.py  test_db_migration.py  test_generate_disconnected.py  test_generate_pyspark.py  test_graph.py  test_parser.py  test_parser_connectors.py  test_parser_duplicate_labels.py  test_parser_node_elements.py  test_parser_routines.py  test_parser_unique_names.py  test_runtime_utils.py
(+8 files in other folders)
