[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talend2python"
version = "0.1.0"
description = "Convert Talend jobs (.item) to Python ETL (PySpark/Pandas)"
authors = [{name = "Sankar + Co", email = "sankar@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jinja2>=3.1.3",
  "lxml>=5.2.1"
]

[project.scripts]
talend2py = "talend2python.cli:main"

[tool.setuptools]
packages = ["talend2python"]